app/globals.css
@import "tailwindcss";

:root {
  --color-background: #ffffff;
  --color-foreground: #171717;
  --color-primary: #E7854D;
  --color-secondary-100: #EDF1F3;
  --color-secondary-300: #ACB5BB;
  --color-text-100: #EDF1F3;
  --color-text-200: #DCE4E8;
  --color-text-300: #B9B9B9;
  --color-text-400: #6C6C6C;
  --color-text-500: #171717; /* default */
  --color-text-600: #04070E;
  --color-gray: #F3F4F6;
  --color-gray-100: #EBEBEB;
  --color-gray-400: #809092;
  --color-gray-700: #343434;
  --color-gray-900: #1B1B1B;
  --color-teal-800: #032425;
  --color-cyan-100: #ECFCFF;
  

  /* offsets */
  --page-max-width: 23.4375rem; /* 375px */
  --page-offset-horizontal: 1rem; /* 16px */
  --header-offset-horizontal: 1.5rem; /* 24px */
  --header-height: 5.25rem; /* 84px */
  --inner-offset-horizontal: 1.5rem; /* 24px */
}

@media (min-width: 768px) {
  :root {
    --page-max-width: 56.25rem; /* 900px */
    --page-offset-horizontal: 2.5rem; /* 40px */
    --header-offset-horizontal: 3.12rem; /* 50px */
    --header-height: 6.25rem; /* 100px */
  }
}

@media (min-width: 1024px) {
  :root {
    --page-max-width: 90rem; /* 1440px */
    --page-offset-horizontal: 4.94rem; /* 79px */
    --header-offset-horizontal: 5.62rem; /* 90px */
    --header-height: 6.25rem; /* 100px */
  }
}


@media (prefers-color-scheme: dark) {
  :root {
    /* --background: #0a0a0a;
    --foreground: #ededed; */
  }
}

body {
  background: var(--color-background);
  color: var(--color-foreground);
  font-family: Arial, Helvetica, sans-serif;
}

@theme inline {
  --color-background: var(--color-background);
  --color-foreground: var(--color-foreground);
  --color-primary: var(--color-primary);
  --color-secondary-100: var(--color-secondary-100);
  --color-secondary-300: var(--color-secondary-300);
  --color-text-100: var(--color-text-100);
  --color-text-200: var(--color-text-200);
  --color-text-300: var(--color-text-300);
  --color-text-400: var(--color-text-400);
  --color-text-500: var(--color-text-500);
  --color-text-600: var(--color-text-600);
  --color-gray: var(--color-gray);
  --color-gray-100: var(--color-gray-100);
  --color-gray-400: var(--color-gray-400);
  --color-gray-700: var(--color-gray-700);
  --color-gray-900: var(--color-gray-900);
  --color-teal-800: var(--color-teal-800);
  --color-cyan-100: var(--color-cyan-100);
  /* Fonts */
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --font-manrope: var(--font-manrope);
  --font-instrument-sans: var(--font-instrument-sans);

  /* Page offsets */
  --page-offset-horizontal: 1.25rem; /* Page offset horizontal: 20px */
  --page-offset-height: 5rem; /* Page offset height: 80px */
  --header-height: 6.5rem; /* Header height: 104px */

}

@layer components {
  /* Containers*/
  .page_container {
    width: 100%;
    max-width: var(--page-max-width);
    padding-left: var(--page-offset-horizontal);
    padding-right: var(--page-offset-horizontal);
    margin-left: auto;
    margin-right: auto;
  }

  .header_container {
    width: 100%;
    max-width: var(--page-max-width);
    padding-left: var(--header-offset-horizontal);
    padding-right: var(--header-offset-horizontal);
    margin-left: auto;
    margin-right: auto;
  }
  
  .inner_container {
    width: 100%;
    padding-left: var(--inner-offset-horizontal);
    padding-right: var(--inner-offset-horizontal);
  }

  /* Messages */
  .message_error {
    font-family: var(--font-inter);
    font-size: 16px;
    color: #ef4444;
    font-weight: 500;
    margin: var(--space-m);
    
  }

  .disabled {
    background-color: var(--color-secondary-100);
    color: var(--color-secondary-300);
    cursor: not-allowed;
    pointer-events: none;
  }
}

@layer utilities {
  /* Text Styles */
  .text-xs {
    font-size: 0.75rem;
    line-height: normal;
    letter-spacing: -0.42px;
  }
  
  .text-sm {
    font-size: 0.875rem;
    line-height: 1.4;
    letter-spacing: -0.49px;
  }
  
  .text-base {
    font-size: 1rem;
    line-height: 1.4;
    letter-spacing: -0.56px;
  }
  
  .text-md {
    font-size: 1.125rem;
    line-height: 1.4;
    letter-spacing: -0.63px;
  }

  .text-lg {
    font-size: 1.25rem;
    line-height: 140%;
    letter-spacing: -0.7px;
  }

  .text-2lg {
    font-size: 1.5rem;
    line-height: 1.4;
    letter-spacing: -0.84px;
  }
  
  .text-xl {
    font-size: 2rem;
    line-height: 1.4;
    letter-spacing: -1.12px;
  }
  
  .text-2xl {
    font-size: 2.25rem;
    line-height: 1.2;
    letter-spacing: -1.26px;
  }
  
  .text-3xl {
    font-size: 2.5rem;
    line-height: 1.2;
    letter-spacing: -1.4px ;
  }
  
  .text-4xl {
    font-size: 3.5rem;
    line-height: 1.2;
    letter-spacing: -1.96px;
  }
  
  .text-5xl {
    font-size: 4.5rem;
    line-height: 1.2;
    letter-spacing: -2.52px;
  }
  
  .text-highlight {
    font-family: var(--font-instrument-sans);
    font-style: italic;
    color: var(--color-primary);
  }
  
}

